--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -69,6 +69,7 @@ image_upload:
             label: 'Watermark "Captain Coaster"'
             helper: 'You can choose to watermark the picture with a Captain Coaster logo to avoid reuse on other websites.'
         upload: 'Submit my picture'
+        back: 'Back to coaster'
         success: 'Picture was uploaded. It will be reviewed by an administrator before display.'
 
 park:
