--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -117,6 +117,8 @@ country.na: 'N/A'
 country.burma: 'Burma'
 country.cyprus: 'Cyprus'
 country.ireland: 'Ireland'
+country.mongolia: 'Mongolia'
+country.czech: 'Czech Republic'
 
 continent.europe: 'Europe'
 continent.america: 'America'
