--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -117,6 +117,8 @@ country.na: 'N/A'
 country.burma: 'Birmanie'
 country.cyprus: 'Chypre'
 country.ireland: 'Irlande'
+country.mongolia: 'Mongolie'
+country.czech: 'République Tchèque'
 
 continent.europe: 'Europe'
 continent.america: 'Amérique'
