add restraints trads

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -51,12 +51,14 @@ pro.hangtime: 'Hangtime'
 pro.duration: 'Duration'
 
 restraint.none: 'None'
-restraint.flying: 'Flying Coaster'
-restraint.shoulder: 'Shoulder restraint'
-restraint.shoulder.common: 'Common Shoulder restraint'
+restraint.flying: 'Flying restraint'
+restraint.shoulder: 'Shoulder harness'
+restraint.shoulder.common: 'Common shoulder harness'
 restraint.lap.common: 'Common lap bar'
 restraint.lap: 'Lap bar'
 restraint.na: 'N/A'
+restraint.seatbelt: 'Seatbelt'
+restraint.vest: 'Vest restraint'
 
 status.announced: 'Announced'
 status.relocated: 'Relocated'
