--- a/app/Resources/translations/database.es.yml
+++ b/app/Resources/translations/database.es.yml
@@ -51,12 +51,14 @@ pro.hangtime: 'Hangtime'
 pro.duration: 'Duración'
 
 restraint.none: 'Ninguno'
-restraint.flying: 'Flying Coaster'
+restraint.flying: 'Flying'
 restraint.shoulder: 'Arnés'
 restraint.shoulder.common: 'Arnés común'
 restraint.lap.common: 'Lap bar común'
-restraint.lap: 'Lap bar individual'
+restraint.lap: 'Lap bar'
 restraint.na: 'N/A'
+restraint.seatbelt: 'Cinturón'
+restraint.vest: 'Vest'
 
 status.announced: 'Anunciado'
 status.relocated: 'Deslocalizado'
