--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -50,13 +50,15 @@ pro.ejectors: 'Ejectors'
 pro.hangtime: 'Hangtime'
 pro.duration: 'Longueur'
 
-restraint.none: 'Aucun'
-restraint.flying: 'Flying Coaster'
+restraint.none: 'Aucune'
+restraint.flying: 'Flying'
 restraint.shoulder: 'Harnais'
 restraint.shoulder.common: 'Harnais commun'
 restraint.lap.common: 'Lap Bar commune'
-restraint.lap: 'Lap Bar individuelle'
+restraint.lap: 'Lap Bar'
 restraint.na: 'N/A'
+restraint.seatbelt: 'Ceinture'
+restraint.vest: 'Veste'
 
 status.announced: 'Annoncé'
 status.relocated: 'Délocalisé'
