--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -102,6 +102,7 @@ map_index:
         score: 'Score'
         atleast: 'at least %count%'
         openingDate: 'Opening date'
+        name: 'Name'
     results: 'Results'
 
 user_profile:
