add materialType, seatinType and model

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -42,6 +42,7 @@ coaster:
         type: 'Type'
         launch: 'Lancement'
         manufacturer: 'Constructeur'
+        materialType: 'Type'
         restraint: 'Retenue'
         forces: 'Forces G'
         opening: 'Ouverture'
