--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -42,6 +42,7 @@ coaster:
         type: 'Type'
         launch: 'Launch'
         manufacturer: 'Manufacturer'
+        materialType: 'Type'
         restraint: 'Restraint'
         forces: 'G-forces'
         opening: 'Opening date'
