--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -127,3 +127,5 @@ continent.america: 'America'
 continent.asia: 'Asia'
 continent.africa: 'Africa'
 continent.oceania: 'Oceania'
+
+data.unknown: 'Unknown'
