--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -127,3 +127,5 @@ continent.america: 'Amérique'
 continent.asia: 'Asie'
 continent.africa: 'Afrique'
 continent.oceania: 'Océanie'
+
+data.unknown: 'Inconnu'
