update icons + sw + seatingType

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -43,6 +43,7 @@ coaster:
         launch: 'Launch'
         manufacturer: 'Manufacturer'
         materialType: 'Type'
+        seatingType: 'Train'
         restraint: 'Restraint'
         forces: 'G-forces'
         opening: 'Opening date'
