--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -45,6 +45,7 @@ coaster:
         manufacturer: 'Constructeur'
         materialType: 'Type'
         seatingType: 'Train'
+        model: 'Modèle'
         restraint: 'Retenue'
         forces: 'Forces G'
         opening: 'Ouverture'
