--- a/app/Resources/translations/validators.en.yml
+++ b/app/Resources/translations/validators.en.yml
@@ -1,1 +1,2 @@
 liste_coaster.duplicate: "%coaster% appears several times. Please remove duplicates."
+contact.recaptcha: "You must check the box 'I am not a robot'"
