--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -1,1 +1,2 @@
 liste_coaster.duplicate: "%coaster% est présent plusieurs fois. Merci de supprimer les doublons."
+contact.recaptcha: "Vous devez cocher la case 'Je ne suis pas un robot'"
